# Personal_knowledge_agent

./: .env.example  .gitignore  README.md
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260711_01_users_knowledge_bases.py  20260711_02_knowledge_graph.py  20260711_03_source_ingestion.py  20260711_04_chunk_embeddings.py  20260711_05_conversations.py  20260711_06_admin_public_agent.py  20260711_07_review_tasks.py  20260711_08_sync_metadata.py  20260711_09_ingestion_tasks.py  20260714_01_visitor_feedback.py
backend/app/: __init__.py  main.py
backend/app/agent/: __init__.py
backend/app/api/: auth.py  dependencies.py  router.py  schemas.py
backend/app/connectors/: __init__.py  git.py  web.py
backend/app/conversation/: __init__.py  router.py  service.py
backend/app/evaluation/: __init__.py  runner.py
backend/app/infrastructure/: __init__.py  bootstrap_admin.py  config.py  database.py  embedding.py  errors.py  health.py  llm.py  middleware.py  models.py  observability.py  security.py
backend/app/ingestion/: cleaning.py  indexing.py  parser.py  router.py  service.py  source_service.py  sync.py  task_router.py  tasks.py
backend/app/knowledge_base/: __init__.py  public_router.py  router.py  service.py
backend/app/knowledge_graph/: __init__.py  extraction.py  review.py  router.py
backend/scripts/: evaluate_retrieval.py  load_test.py
backend/tests/: test_auth_knowledge_base.py  test_config.py  test_document_parser.py  test_embedding.py  test_errors.py  test_evaluation.py  test_graph_extraction_review.py  test_health.py  test_ingestion_worker.py  test_knowledge_graph_models.py  test_learning_review.py  test_llm.py  test_production_hardening.py  test_profile_retrieval.py  test_rag_conversation.py  test_real_dependencies.py  test_source_connectors.py  test_sse.py
deploy/: nginx.conf  (+4 more)
(+29 files in other folders)
