[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "personal-knowledge-agent"
version = "0.1.0"
description = "Personal knowledge base question-answering agent"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.15,<2.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "pwdlib[argon2]>=0.2,<1.0",
  "pyjwt>=2.10,<3.0",
  "openai>=1.70,<2.0",
  "pymupdf>=1.25,<2.0",
  "pydantic[email]>=2.9,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "python-multipart>=0.0.20,<1.0",
  "sqlalchemy[asyncio]>=2.0.38,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21,<1.0",
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.11,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "ASYNC"]
